platform/gcp/monitoring-foundation/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    area: monitoring
    platform: gcp
    cost-allocation: shared
    app.kubernetes.io/part-of: cantaloupe-platform
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
