platform/gcp/monitoring-foundation/prometheus-ui-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-ui-tailscale
  namespace: monitoring
  labels:
    app: prometheus
    area: monitoring
    platform: gcp
    cost-allocation: shared
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: monitoring-prometheus
  ports:
    - name: http-web
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30909
